# object_tracking_eval

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  DisplayImage  Tracker  Tracker1  getVersion  test.cpp  tracker.cpp  tracker.orig.cpp  tracker_simplified.cpp  tracker_working.cpp
bboxes/: 198_backpacks.txt  198_drill.txt  198_drill_less.txt  198_fire_ex.txt  198_fire_ex_reverse.txt  198_survivors.txt
